--- a/Sicsoft.Checkin.Web/Pages/OrdenVenta/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/OrdenVenta/Index.cshtml
@@ -97,6 +97,8 @@
                             text: 'Ha ocurrido un error al intentar procesar ' + json
 
                         })
+                        $("#divProcesando").hide();
+
                     }
                 },
 
