--- a/Sicsoft.Checkin.Web/Pages/OrdenVenta/Nuevo.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/OrdenVenta/Nuevo.cshtml
@@ -652,6 +652,9 @@
 
                 var recibidos = {
                     id: 0,
+                    idCondPago: $("#condPago").val(),
+                    idGarantia: $("#tipoGarantia").val(),
+                    idTiemposEntregas: $("#tiemposEntrega").val(),
                     BaseEntry: $("#BaseEntry").val(),
                     DocEntry: 0,
                     DocNum: 0,
@@ -725,7 +728,9 @@
                                             title: 'Oops...',
                                             text: 'Ha ocurrido un error al intentar guardar ' + json.mensaje
 
-                                        })
+                                        });
+                                        $("#divProcesando").hide();
+
                                     }
                                 },
 
@@ -739,12 +744,14 @@
                                 },
                                 error: function(error) {
                                     button.disabled = false;
+                                    $("#divProcesando").hide();
 
                                 }
                             });
                         }
 
                         button.disabled = false;
+                        $("#divProcesando").hide();
 
                     })
                 }
@@ -756,6 +763,8 @@
                     text: 'Ha ocurrido un error al intentar guardar ' + e
 
                 })
+                $("#divProcesando").hide();
+
             }
         }
         function validar(e) {
@@ -896,7 +905,53 @@
                             </select>
                         </div>
                     </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Condiciones de Pago:</label>
+                            <select id="condPago" class="form-control" required asp-for="Orden.idCondPago">
 
+                                @foreach (var item in Model.Condiciones)
+                                {
+                                    <option value="@item.id">@item.Nombre</option>
+                                }
+
+                            </select>
+
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Tipo de Garantia:</label>
+                            <select id="tipoGarantia" class="form-control" required asp-for="Orden.idGarantia">
+
+
+                                @foreach (var item in Model.Garantias)
+                                {
+                                    <option value="@item.id">@item.Nombre</option>
+                                }
+
+
+                            </select>
+
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Tiempos de Entrega:</label>
+                            <select id="tiemposEntrega" class="form-control" required asp-for="Orden.idTiemposEntregas">
+
+                                @foreach (var item in Model.Tiempos)
+                                {
+                                    <option value="@item.id">@item.Nombre</option>
+                                }
+
+
+                            </select>
+
+                        </div>
+                    </div>
                     <div class="col-md-4">
                         <div class="form-group">
                             <label>Referencia:</label>
